--- a/3-5-13-PretrainedModel.ipynb
+++ b/3-5-13-PretrainedModel.ipynb
@@ -600,6 +600,8 @@
         "    top_prediction_str = 'unknown'\n",
         "\n",
         "  print('%s model guessed the value to be %s' % (model_type, top_prediction_str))"
+        "\n",
+        "  # return model_type, top_prediction_str # uncomment for easier batch processing"
       ],
       "execution_count": null,
       "outputs": []
