fixed a few typos in 3-8-13-Autoencoders

--- a/3-8-13-Autoencoders.ipynb
+++ b/3-8-13-Autoencoders.ipynb
@@ -1188,7 +1188,7 @@
         "id": "zpLSDAeb51D_"
       },
       "source": [
-        "If you examine the recontruction error for the anomalous examples in the test set, you'll notice most have greater reconstruction error than the threshold. By varing the threshold, you can adjust the [precision](https://developers.google.com/machine-learning/glossary#precision) and [recall](https://developers.google.com/machine-learning/glossary#recall) of your classifier. "
+        "If you examine the reconstruction error for the anomalous examples in the test set, you'll notice most have greater reconstruction error than the threshold. By varing the threshold, you can adjust the [precision](https://developers.google.com/machine-learning/glossary#precision) and [recall](https://developers.google.com/machine-learning/glossary#recall) of your classifier. "
       ]
     },
     {
@@ -1348,7 +1348,7 @@
         "id": "Hk6LfUhB1ohP"
       },
       "source": [
-        "Since our model does a great job in diferentiating normal rythms from abnormal ones it seems easy to pick the threshold that would give us the high true positive rate (TPR) and low false positive rate (FPR) that is at the 'knee' of the curve.\n",
+        "Since our model does a great job in differentiating normal rythms from abnormal ones it seems easy to pick the threshold that would give us the high true positive rate (TPR) and low false positive rate (FPR) that is at the 'knee' of the curve.\n",
         "\n",
         "However, in some cases there may be an application constraint that requires a specific TPR or FPR, in which case we would have to move off of the 'knee' and sacrifice overall accuracy. In this case we might rather have false alarms than miss a potentially dangerous rythm."
       ]
@@ -1359,11 +1359,11 @@
         "id": "6sH6Yv-kx17h"
       },
       "source": [
-        "Now that we understand how to visualize the impact of the selected threshold, What if we wanted to compare the performance of models without factoring in the threshold? Simply comparing the accuracy won't work since that depends on the threshold you pick and that won't have the same impact across models.\n",
+        "Now that we understand how to visualize the impact of the selected threshold, what if we wanted to compare the performance of models without factoring in the threshold? Simply comparing the accuracy won't work since that depends on the threshold you pick and that won't have the same impact across models.\n",
         "\n",
         "Instead we can measure the area under the curve (AUC) in the ROC plot. One way to interpret the AUC metric is as the probability that the model ranks a random positive example more highly than a random negative example.\n",
         "\n",
-        "In general the AUC is a useful metic for comparison as it is threshold invariant *and* scale invariant"
+        "In general the AUC is a useful metric for comparison as it is threshold invariant *and* scale invariant"
       ]
     },
     {
