fixed a few typos in 3-8-16-Assignment

--- a/3-8-13-Autoencoders.ipynb
+++ b/3-8-13-Autoencoders.ipynb
@@ -1348,9 +1348,9 @@
         "id": "Hk6LfUhB1ohP"
       },
       "source": [
-        "Since our model does a great job in differentiating normal rythms from abnormal ones it seems easy to pick the threshold that would give us the high true positive rate (TPR) and low false positive rate (FPR) that is at the 'knee' of the curve.\n",
+        "Since our model does a great job in differentiating normal rhythms from abnormal ones it seems easy to pick the threshold that would give us the high true positive rate (TPR) and low false positive rate (FPR) that is at the 'knee' of the curve.\n",
         "\n",
-        "However, in some cases there may be an application constraint that requires a specific TPR or FPR, in which case we would have to move off of the 'knee' and sacrifice overall accuracy. In this case we might rather have false alarms than miss a potentially dangerous rythm."
+        "However, in some cases there may be an application constraint that requires a specific TPR or FPR, in which case we would have to move off of the 'knee' and sacrifice overall accuracy. In this case we might rather have false alarms than miss a potentially dangerous rhythm."
       ]
     },
     {
